MicroservicesMigrationandKubernetes/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: medium-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - medium-gateway
  http:
  - match:
    - uri:
        prefix: /users
    route:
    - destination:
        host: user-service
        port:
          number: 80
